ci: Allow MELPA package updates by setting EXIST_OK

--- a/.github/workflows/melpazoid.yml
+++ b/.github/workflows/melpazoid.yml
@@ -27,6 +27,5 @@ jobs:
       env:
         LOCAL_REPO: ${{ github.workspace }}
         RECIPE: (trailing-newline-indicator :fetcher github :repo "saulotoledo/trailing-newline-indicator")
-        # Change to true when the package is already in MELPA:
-        EXIST_OK: false
+        EXIST_OK: true
       run: echo $GITHUB_REF && make -C ~/melpazoid
